--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>blog</title>
 	<link rel="stylesheet" href="./style/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
 </head>
 <body>
 	<div class="wrapper">
@@ -26,20 +26,29 @@
 			<div class="container">
 				<div class="content">
 					<h2>What Is A Body Paragraph Of Essay?</h2>
-					<p>Although people engage in writing this sort of texts regularly, starting from the elementary school, not everyone has a clear understanding of how it should be written even when they are in college or university. This is due to some specific requirements that it has.</p><br>
+					<div class="text">
+						<p>Although people engage in writing this sort of texts regularly, starting from the elementary school, not everyone has a clear understanding of how it should be written even when they are in college or university. This is due to some specific requirements that it has.</p><br>
 
-					<p>One of the main issues with writing such a task, is associated with writing its body, which is the main part of any essay. It consists of a topic sentence, other supporting sentences, and the conclusion – each of these parts has its own meaning and should be emphasized well to create a proper paragraph for the body of an essay.</p><br>
+						<p>One of the main issues with writing such a task, is associated with writing its body, which is the main part of any essay. It consists of a topic sentence, other supporting sentences, and the conclusion – each of these parts has its own meaning and should be emphasized well to create a proper paragraph for the body of an essay.</p><br>
 
-					<p>Each idea that you present in your essay should have its own body paragraphs. You should also make transitions between them to move logically to other paragraphs because it helps you to develop a good structure of the whole essay.</p><br>
+						<p>Each idea that you present in your essay should have its own body paragraphs. You should also make transitions between them to move logically to other paragraphs because it helps you to develop a good structure of the whole essay.</p><br>
 
-					<p>You can read examples of other papers to learn how to write it. Each student can download samples of academic papers with a specific subject to understand how to write a sentence in an appropriate format and create a body paragraph of the essay based on its topic.</p><br>
+						<p>You can read examples of other papers to learn how to write it. Each student can download samples of academic papers with a specific subject to understand how to write a sentence in an appropriate format and create a body paragraph of the essay based on its topic.</p><br>
 
-					<p>If you learn to write such fragments of your paper, it will be easier for you to write more and more complex and difficult papers. That is why the understanding of the paragraph structure is crucial for your further learning.</p><br>
+						<p>If you learn to write such fragments of your paper, it will be easier for you to write more and more complex and difficult papers. That is why the understanding of the paragraph structure is crucial for your further learning.</p><br>
 
-					<p>If you don’t know how to work on this part of a paper, you can order an essay online and get the result you need. You should know your topic and all the requirements before making such orders.</p>
+						<p>If you don’t know how to work on this part of a paper, you can <a href="">order an essay online</a> and get the result you need. You should know your topic and all the requirements before making such orders.</p>
+					</div>
 				</div>
 				<div class="sidebar">
-					
+					<div class="card">
+						<h2>What Paperell’s  Services About?</h2>
+						<ol>
+							<li>Paperell is a well-known online writing center.</li>
+							<li>Its benefit is the business model of the platform</li>
+							<li>Any student gets personal writing help of high quality</li>
+						</ol>
+					</div>
 				</div>
 			</div>
 		</div>
