--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>blog</title>
 	<link rel="stylesheet" href="./style/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700,900" rel="stylesheet">
 </head>
 <body>
 	<div class="wrapper">
@@ -22,37 +22,64 @@
 				</ul>
 			</div>
 		</div>
-		<div class="essay">
-			<div class="container">
-				<div class="content">
-					<h2>What Is A Body Paragraph Of Essay?</h2>
-					<div class="text">
-						<p>Although people engage in writing this sort of texts regularly, starting from the elementary school, not everyone has a clear understanding of how it should be written even when they are in college or university. This is due to some specific requirements that it has.</p><br>
+		<div class="cont">
+			<div class="essay">
+				<div class="container">
+					<div class="content">
+						<h2>What Is A Body Paragraph Of Essay?</h2>
+						<div class="text">
+							<p>Although people engage in writing this sort of texts regularly, starting from the elementary school, not everyone has a clear understanding of how it should be written even when they are in college or university. This is due to some specific requirements that it has.</p>
 
-						<p>One of the main issues with writing such a task, is associated with writing its body, which is the main part of any essay. It consists of a topic sentence, other supporting sentences, and the conclusion – each of these parts has its own meaning and should be emphasized well to create a proper paragraph for the body of an essay.</p><br>
+							<p>One of the main issues with writing such a task, is associated with writing its body, which is the main part of any essay. It consists of a topic sentence, other supporting sentences, and the conclusion – each of these parts has its own meaning and should be emphasized well to create a proper paragraph for the body of an essay.</p>
 
-						<p>Each idea that you present in your essay should have its own body paragraphs. You should also make transitions between them to move logically to other paragraphs because it helps you to develop a good structure of the whole essay.</p><br>
+							<p>Each idea that you present in your essay should have its own body paragraphs. You should also make transitions between them to move logically to other paragraphs because it helps you to develop a good structure of the whole essay.</p>
 
-						<p>You can read examples of other papers to learn how to write it. Each student can download samples of academic papers with a specific subject to understand how to write a sentence in an appropriate format and create a body paragraph of the essay based on its topic.</p><br>
+							<p>You can read examples of other papers to learn how to write it. Each student can download samples of academic papers with a specific subject to understand how to write a sentence in an appropriate format and create a body paragraph of the essay based on its topic.</p>
 
-						<p>If you learn to write such fragments of your paper, it will be easier for you to write more and more complex and difficult papers. That is why the understanding of the paragraph structure is crucial for your further learning.</p><br>
+							<p>If you learn to write such fragments of your paper, it will be easier for you to write more and more complex and difficult papers. That is why the understanding of the paragraph structure is crucial for your further learning.</p>
 
-						<p>If you don’t know how to work on this part of a paper, you can <a href="">order an essay online</a> and get the result you need. You should know your topic and all the requirements before making such orders.</p>
+							<p>If you don’t know how to work on this part of a paper, you can <a href="">order an essay online</a> and get the result you need. You should know your topic and all the requirements before making such orders.</p>
+						</div>
 					</div>
-				</div>
-				<div class="sidebar">
-					<div class="card">
-						<h2>What Paperell’s  Services About?</h2>
-						<ol>
-							<li>Paperell is a well-known online writing center.</li>
-							<li>Its benefit is the business model of the platform</li>
-							<li>Any student gets personal writing help of high quality</li>
-						</ol>
+					<div class="sidebar">
+						<div class="card">
+							<h2>What Paperell’s  Services About?</h2>
+							<div class="line"></div>
+							<ol>
+								<li>Paperell is a well-known online writing center.</li>
+								<li>Its benefit is the business model of the platform</li>
+								<li>Any student gets personal writing help of high quality</li>
+							</ol>
+							<a href=""><div class="card-button">Learn More</div></a>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-
+			
+			<div class="accord">
+				<div class="container">
+					<div class="content">
+						<h2>Writing A Body Paragraph Accordingly To Requirements</h2>
+						<div class="text">
+							<p>The process of writing this fragment should start from its planning. You should define the main parts of your paragraph and then write each of these parts as needed. You can write less or more sentences, depending on how crucial is this fragment for your essay.</p>
+							<p>The body paragraph structure consists of the main point, supporting sentences, and transitions to the thesis statement and other parts of a paper. This is a simple structure that you can use in different papers.</p>
+							The main point is the sentence that describes the idea and your position about it, this sentence should clarify what you are going to tell and present your thesis in an understandable way.</p>
+							<p>Supporting sentences should provide evidence, facts, and explanations for your thesis. They let readers learn your position better and get arguments that convince them. You can write many supporting sentences if needed.</p>
+							<p>In a conclusion of a paragraph of an essay, emphasize the significance of previous sentences, you are also able to make transitions to your thesis or other parts of your paper if it is necessary.</p>
+							<p>This section example will help you to write a body paragraph and make it interesting for your readers. After taking a look at it, you will have an idea of how it should look. Make sure you understand the meaning of each part to make the section logically consistent and readable.</p>
+							<p>You should also check if you have any requirements given by an instructor for the size and structure of these elements. It will be helpful if you are going to <a href="">buy custom assignment</a> or write it in very short terms.</p>
+						</div>
+						<div class="accord-img"></div>
+					</div>
+					<div class="sidebar">
+						<div class="Mask">
+							<h2>Most Popular  Services</h2>
+							<div class="line"></div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>	
 	</div>
 </body>
 </html>
