--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					</div>
 					<div class="sidebar">
 						<div class="card">
-							<h2>What Paperell’s  Services About?</h2>
+							<h2>What Paperell’s Services About?</h2>
 							<div class="line"></div>
 							<ol>
 								<li>Paperell is a well-known online writing center.</li>
@@ -73,8 +73,16 @@
 					</div>
 					<div class="sidebar">
 						<div class="Mask">
-							<h2>Most Popular  Services</h2>
+							<h2>Most Popular Services</h2>
 							<div class="line"></div>
+							<ol>
+								<li>Essay</li>
+								<li>Research Paper</li>
+								<li>Coursework</li>
+								<li>Thesis</li>
+								<li>Case Study</li>
+								<li>Select Yours</li>
+							</ol>
 						</div>
 					</div>
 				</div>
